--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kalkulator Walut Online</title>
     <script defer src="script.js"></script>
+    <meta property="og:image" content="images/share.jpg">
+    <link rel="icon" href="images/icon.png">
     <link href="css\style.css" rel="stylesheet">
     <link href="css\body.css" rel="stylesheet">
     <link href="css\section.css" rel="stylesheet">
