--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 </head>
 
 <body class="body">
+    <div class="body__backgroundImage"> 
     <header class="body__header">
         <h1>💰 KALKULATOR WALUT</h1>
     </header>
@@ -77,6 +78,7 @@
 
         </section>
     </main>
+</div>
 </body>
 
 </html>
