--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&display=swap" rel="stylesheet">
 </head>
 
-<body class="body">
-    <div class="body__backgroundImage"> 
+<body class="body body__backgroundImage">
     <header class="body__header">
         <h1>💰 KALKULATOR WALUT</h1>
     </header>
@@ -70,7 +69,7 @@
                         <label>
                             <span class="section__label section__label--name">Otrzymana kwota: </span><input
                                 class="secondCash section__label" type="number" name="przeliczonaKwota"
-                                placeholder="Przewalutowana kwota" min="0" step="any" readonly>
+                                placeholder="Kwota" min="0" step="any" readonly>
                         </label>
                     </p>
                 </fieldset>
@@ -78,7 +77,6 @@
 
         </section>
     </main>
-</div>
 </body>
 
 </html>
